# Login-and-Registration-System

./: CMakeLists.txt  LICENSE  README.md  cmake-variants.yaml
.cmake/: FindCatch2.cmake  FindCxxopts.cmake
.cmake/configurations/: build.cmake
.cmake/dependencies/: FindPhoenix.cmake
share/: install.cmake
source/: CMakeLists.txt  credentials.hpp  input_output.hpp  lars.hpp  login.hpp  main.cpp  registration.hpp
tests/: CMakeLists.txt  lars.cpp  login.cpp  registration.cpp
